Changelog for Shake

    #89, support :: as a build rule separator
0.11
    Add alternatives to allow overlapping rules
    Make storedValue take a ShakeOptions structure
    Generalise the newCache function
    Improve the performance of the Ninja parser
    Make the database more compact
    #84, ensure you normalise removeFile patterns first
    #82, make -j0 guess at the number of processors
    #81, add --lint-tracker to use tracker.exe
    Add trackRead, trackWrite
    Add trackUse, trackChange, trackAllow
    #85, move rule creation functions into Development.Shake.Rule
    Mark Development.Shake.Sys as DEPRECATED with a pragma
    Change shakeLint to be of type Maybe Lint, instead of Bool
    #50, add shakeArgsAccumulate
0.10.10
    Improve Ninja --lint checking
0.10.9
    #76, add Ninja specific lint checking
    #75, add orderOnly dependencies
    #76, add needed, to assert a need doesn't rebuild
    #78, don't use cabal in the test suite
    #77, add shakeRunCommands and --skip-commands
    #67, add withVerbosity
    #51, add getShakeOptions
    Lots of Haddock improvements
    Deprecate system', use cmd or command instead
    #53, add addPath and addEnv to modify environment variables
    Make all search path things return the native separators
    #73, if Haskell can't write a unicode filename, skip the test
    Print out the entire database in diagnostics mode
    Rewrite database writes, old code could break metadata on error
    #25, optimise building with Ninja
    Fix many bugs in FilePath.normalise
    Require QuickCheck-2.0 or higher
    Change how the makefile parser treats \ characters
    Add a --no-build flag
    #74, allow cmd to be used with result IO
    Add a Util module, with Makefile parsing
0.10.8
    Allow unix-1.5.1 again
    Require Cabal 1.10 or above
    Convert to the cabal test compatible test suite
0.10.7
    Support time-1.2
    #71, fix a bug when requesting all three outputs from command