@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Add a Config module
     #89, support :: as a build rule separator
 0.11
     Add alternatives to allow overlapping rules
